fixed z-index of theme switcher button

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -112,6 +112,7 @@
   border-radius: 50%;
   height: 3rem;
   width: 3rem;
+  z-index: 99;
 }
 
 .center {
